--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,17 +13,28 @@
         <link rel="stylesheet" href="/css/main.css">
 
     </head>
-    <body>
+    <body id="{{ page.type }}">
+        <a href="https://github.com/radiodan">
+          <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
+        </a>
+        <div class="container masthead">
+            <div class="site">
+                <div class="header">
+                  <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+                  <a class="extra" href="/">home</a>
+
+                  <a href="https://twitter.com/teamradiodan" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @teamradiodan</a>
+                  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
+                <div class="hero">
+                  An (experimental) homebrew, flexible, open source, IP radio
+                </div>
+            </div>
+        </div>
 
         <div class="container">
           <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
-
                 {{ content }}
-
             <div class="footer">
             </div>
           </div>
