--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+type: post
 ---
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }} by <a href="http://github.com/{{ page.author }}">{{ page.author }}</a></p>
