Move "about" to static page (including project and people descriptions)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             <div class="site">
                 <div class="header">
                   <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-                  <a class="extra" href="/#about">about</a>
+                  <a class="extra" href="/about">about</a>
                   <a class="extra" href="/#blog">blog</a>
 
                   <a href="https://twitter.com/teamradiodan" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @teamradiodan</a>
