--- a/css/main.css
+++ b/css/main.css
@@ -211,6 +211,10 @@ a.twitter-follow-button {
   border: none;
 }
 
+.post img {
+  width: 100%;
+}
+
 /* terminal */
 .post pre.terminal {
   border: 1px solid #000;
