--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,16 @@ type: post
 ---
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }} by
-{% if page.author.name and page.author.github %}
-  <a href="http://github.com/{{ page.author.github }}">{{ page.author.name }}</a></p>
-{% else %}
-  {{ page.author }}
-{% endif %}
+  {% if page.author.first and page.author.first.name %}
+    {% for author in page.author %}
+      <a href="http://github.com/{{ author.github }}">{{ author.name }}</a>{% unless forloop.last %},{% endunless %}
+    {% endfor %}
+  {% elsif page.author.name and page.author.github %}
+    <a href="http://github.com/{{ page.author.github }}">{{ page.author.name }}</a>
+  {% else %}
+    {{ page.author }}
+  {% endif %}
+</p>
 
 <div class="post">
 {{ content }}
