--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,23 @@ ul.posts span {
   font-size: 80%;
 }
 
+.items {
+  list-style-position: inside;
+  margin-bottom: 2em;
+}
+
+.items li {
+  line-height: 1.75em;
+}
+
+ul.items li {
+  list-style-type: disc;
+}
+
+ol ul li {
+  margin-left: 1em;
+}
+
 /*****************************************************************************/
 /*
 /* Site
