--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@
         <div class="container masthead">
             <div class="site">
                 <div class="header">
-                  <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+                  <h1 class="title">
+                    <a href="/"><img src="/assets/radiodan.png" title="Radiodan"/></a>
+                  </h1>
                   <a class="extra" href="/about">about</a>
                   <a class="extra" href="/#blog">blog</a>
 
