--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <link rel="alternate" type="application/atom+xml" title="Radiodan Atom Feed" href="feed.xml">
+        <link rel="alternate" type="application/atom+xml" title="Radiodan Atom Feed" href="{{ site.url }}/feed.xml">
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
