--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </div>
                 <div class="hero">
-                  An (experimental) homebrew, flexible, open source, IP radio
+                  A project to inspire new ideas for radio
                 </div>
             </div>
         </div>
