First draft of architecture overview

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,24 @@ a:visited { color: #333; }
 
 /*****************************************************************************/
 /*
+/* General
+/*
+/*****************************************************************************/
+.todo {
+  display: inline-block;
+  padding: 0.2em 0.5em;
+  border-radius: 0.2em;
+  background-color: hsla(41, 89%, 46%, 0.3);
+  color: #333;
+  font-style: italic;
+}
+
+.todo:before {
+  content: 'TODO: ';
+}
+
+/*****************************************************************************/
+/*
 /* Home
 /*
 /*****************************************************************************/
