--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,19 @@ a:visited { color: #333; }
   content: 'TODO: ';
 }
 
+.note {
+  display: inline-block;
+  padding: 0.5em 0.5em;
+  border-radius: 0.2em;
+  background-color: hsla(207, 100%, 54%, 0.3);
+  color: #333;
+}
+
+.note:before {
+  content: 'NOTE: ';
+  font-weight: bold;
+}
+
 /*****************************************************************************/
 /*
 /* Home
