--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
+        <link rel="stylesheet" href="/css/lib/normalize.css">
+        <link rel="stylesheet" href="/css/skeleton.css">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
