--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,28 +22,28 @@
           <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
         </a>
         <div class="container masthead">
-            <div class="site">
-                <div class="header">
-                  <h1 class="title">
-                    <a href="/"><img src="/assets/radiodan.png" title="Radiodan"/></a>
-                  </h1>
-                  <a class="extra" href="/about">about</a>
-                  <a class="extra" href="/#blog">blog</a>
+          <div class="header row">
+            <h1 class="title one-third column">
+              <a href="/"><img src="/assets/radiodan.png" title="Radiodan"/></a>
+            </h1><!-- .title -->
+            <div class="nav two-thirds column">
+              <a class="extra" href="/about">about</a>
+              <a class="extra" href="/#blog">blog</a>
+            </div><!-- .links -->
 
-                  <a href="https://twitter.com/teamradiodan" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @teamradiodan</a>
-                  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-                </div>
-                <div class="hero">
-                  A project to inspire new ideas for radio
-                </div>
+            <a href="https://twitter.com/teamradiodan" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @teamradiodan</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+          </div><!-- .header -->
+          <div class="row">
+            <div class="hero eleven columns">
+              A project to inspire new ideas for radio
             </div>
+          </div>
         </div>
 
         <div class="container">
-          <div class="site">
-                {{ content }}
-            <div class="footer">
-            </div>
+          {{ content }}
+          <div class="footer">
           </div>
         </div> <!-- /container -->
 
