--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
+        <title>Radiodan : {{ page.title }}</title>
         <link rel="alternate" type="application/atom+xml" title="Radiodan Atom Feed" href="{{ site.url }}/feed.xml">
         <meta name="viewport" content="width=device-width">
 
