--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="/css/main.css">
 
     </head>
-    <body id="{{ page.type }}">
+    <body id="{{ page.section }}">
         <a href="https://github.com/radiodan">
           <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
         </a>
@@ -26,19 +26,28 @@
             <h1 class="title one-third column">
               <a href="/"><img src="/assets/radiodan.png" title="Radiodan"/></a>
             </h1><!-- .title -->
-            <div class="nav two-thirds column">
-              <a class="extra" href="/about">about</a>
-              <a class="extra" href="/#blog">blog</a>
-            </div><!-- .links -->
-
             <a href="https://twitter.com/teamradiodan" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @teamradiodan</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
           </div><!-- .header -->
+          {% if page.type == 'home' %}
           <div class="row">
             <div class="hero eleven columns">
               A project to inspire new ideas for radio
             </div>
           </div>
+          {% endif %}
+          <nav>
+            <ul>
+              <li data-section="about"><a href="/about">About</a></li>
+              <li data-section="blog"><a href="/#blog">Blog</a></li>
+              <li data-section="tutorials"><a href="/help/tutorials">Tutorials</a></li>
+            </ul>
+            <ul class="subnav">
+            {% for item in page.subnav %}
+              <li><a href="{{ item.href }}">{{ item.title }}</a></li>
+            {% endfor %}
+            </ul>
+          </nav>
         </div>
 
         <div class="container main">
