--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,10 @@ a.twitter-follow-button {
   border-bottom: 1px solid #0eb9e7;
 }
 
+.masthead .title {
+  margin-bottom: 0.5em;
+}
+
 .masthead .title img {
   width: 100%;
 }
@@ -140,21 +144,65 @@ a.twitter-follow-button {
   text-decoration: underline;
 }
 
+/*
+  Navigation
+*/
+nav {
+  font-size: 1.5em;
+}
+ul.subnav {
+  font-size: 0.8em;
+}
+nav,
+ul.subnav {
+  color: #fff;
+  background-color: #0EB9E7;
+}
+nav ul {
+  margin: 0;
+}
+.subnav li {
+  padding: 0.5em 0;
+}
+nav li,
+ul.subnav li {
+  display: inline-block;
+  list-style: none;
+  margin: 0;
+  padding: 0 1em;
+}
+
+nav li:hover {
+  background-color: hsla(193, 59%, 48%, 1);
+}
+nav a,
+nav a:hover,
+nav a:visited {
+  color: #fff;
+  text-decoration: none;
+}
+
+ul.subnav li:hover {
+  background-color: hsla(193, 49%, 48%, 1);
+}
+
+
+ul.subnav,
+#about nav li[data-section=about],
+#blog nav li[data-section=blog],
+#tutorials nav li[data-section=tutorials] {
+  background-color: hsla(193, 59%, 48%, 1);
+}
+
 /* Hero
    Shown on homepage only
 */
 .hero {
-  display: none;
-
   padding: 0 0 0.5em 0;
   color: #5a5a5b;
   font-size: 4em;
   line-height: 1;
   text-align: left;
-}
-
-#home .hero {
-  display: block;
 }
 
 /*
