--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,13 @@
 
         <div class="container main">
           {{ content }}
-          <div class="footer">
-          </div>
         </div> <!-- /container -->
+
+        <div class="container">
+          <div class="footer">
+            A project by <a href="http://www.bbc.co.uk/rd/projects/radiodan">BBC Research &amp; Development</a>
+          </div>
+        </div>
 
         <!-- Anlytics -->
         <script>
