--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
             <ul>
               <li data-section="about"><a href="/about">About</a></li>
               <li data-section="blog"><a href="/#blog">Blog</a></li>
-              <li data-section="tutorials"><a href="/help/tutorials">Tutorials</a></li>
+              <li data-section="help"><a href="/help">Help</a></li>
             </ul>
             <ul class="subnav">
             {% for item in page.subnav %}
