Swicthed blog and tutorials

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
           <nav>
             <ul>
               <li data-section="about"><a href="/about">About</a></li>
+              <li data-section="help"><a href="/help">Quick start</a></li>
               <li data-section="blog"><a href="/#blog">Blog</a></li>
-              <li data-section="help"><a href="/help">Help</a></li>
             </ul>
             <ul class="subnav">
             {% for item in page.subnav %}
