--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 
         <div class="container">
           <div class="footer">
-            A project by <a href="http://www.bbc.co.uk/rd/projects/radiodan">BBC Research &amp; Development</a>
+            An Open Source project originating at <a href="http://www.bbc.co.uk/rd/projects/radiodan">BBC Research &amp; Development</a>
           </div>
         </div>
 
