--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
     </head>
     <body id="{{ page.section }}">
-        <a href="https://github.com/radiodan">
+        <a href="https://github.com/andrewn/neue-radio">
           <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
         </a>
         <div class="container masthead">
